# vanilla-OSX

./: README.md
gui/: CMakeLists.txt  main.c  pipemgmt.c  platform.c
gui/ui/: ui_sdl.c
pipe/: CMakeLists.txt
pipe/macos/: CMakeLists.txt  main.c  wifi.h  wifi.m
